# recipe_blog

./: pyproject.toml  recipe_blog.db
recipe_blog/: app.py
recipe_blog/models/: post.py
recipe_blog/routes/: post.py
recipe_blog/templates/: new_post.html  post.html
